--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <meta name="description" content="خصم 50% للمستخدمين الجدد على تطبيق شي ان SHEIN App باستخدام كود V674RLD" />
+  <title>كود خصم شي ان 50% | SHEIN App</title>
 
-  <!-- Ultra Light Social Optimized -->
   <style>
     *{box-sizing:border-box}
     body{
@@ -14,7 +13,6 @@
       font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
       background:#fff;
       color:#222;
-      padding-bottom:80px;
     }
     .wrap{
       max-width:520px;
@@ -55,75 +53,67 @@
       border-radius:6px;
       background:#111;
       color:#fff;
+      cursor:pointer;
     }
 
-    .sticky{
-      position:fixed;
-      left:0;right:0;bottom:0;
-      background:#e60073;
-      text-align:center;
-      padding:14px;
-      font-size:17px;
-      font-weight:600;
+    #copied{
+      display:none;
+      color:green;
+      margin-top:10px;
+      font-size:14px;
     }
-    .sticky a{color:#fff;text-decoration:none}
 
     small{color:#777;font-size:13px}
   </style>
+
+  <script>
+    function copyCode() {
+      const code = "V674RLD";
+      navigator.clipboard.writeText(code).then(() => {
+        document.getElementById("copied").style.display = "block";
+      });
+    }
+  </script>
 </head>
+
 <body>
 
-  <main class="wrap">
-    <h1>Code&Shop</h1>
-    <h2>أهلاً وسهلاً بكم متابعين وزوار صفحة Code&Shop</h2>
+<main class="wrap">
+  <h1>Code&Shop</h1>
+  <h2>أهلاً وسهلاً بكم متابعين وزوار صفحة Code&Shop</h2>
 
-    <div class="alert">
-      أكبر خصومات تطبيق شي ان 50% وأكثر
-    </div>
-
-    <p>
-      خصم <strong>50%</strong> للمستخدمين الجدد على
-      <strong>تطبيق شي ان</strong> – <strong>SHEIN App</strong>
-    </p>
-
-    <div class="coupon">
-      <div class="code" id="c">V674RLD</div>
-      <button class="copy" onclick="navigator.clipboard.writeText('V674RLD')">📋 نسخ كود الخصم</button>
-    </div>
-
-    <p style="font-weight:600;margin-top:20px">🟢 الطريقة الأولى: استخدام الكود يدوياً</p>
-    <p>
-      1- اضغط على زر <strong>نسخ كود الخصم</strong> بالأعلى.<br />
-      2- افتح <strong>تطبيق شي ان (SHEIN App)</strong>.<br />
-      3- ضع الكود في خانة البحث ليتم تفعيل خصم <strong>50%</strong> مباشرة.
-    </p>
-
-    <p style="font-weight:600;margin-top:20px">⚡ الطريقة الثانية (الأسرع): التفعيل التلقائي</p>
-    <p>
-      اضغط على الزر أدناه للانتقال مباشرة إلى <strong>موقع / تطبيق شي ان</strong>
-      مع تفعيل الخصم تلقائياً دون الحاجة لنسخ الكود.
-    </p>
-
-    <p>
-      <a href="https://onelink.shein.com/28/5ey70p3cclk8" target="_blank" style="display:inline-block;padding:12px 20px;border-radius:8px;background:#000;color:#fff;text-decoration:none;font-weight:600">
-        الانتقال السريع إلى شي ان (SHEIN)
-      </a>
-    </p>
-      <button class="copy" onclick="navigator.clipboard.writeText('V674RLD')">📋 نسخ كود الخصم</button>
-    </div>
-
-    <p>
-      لا تفوّتوا فرصة الاستفادة من الخصم، وفي حال احتجتم إلى أي مساعدة يمكنكم التواصل معنا عبر الماسنجر على صفحتنا Code&Shop.
-    </p>
-
-    <small>* العرض مخصص للمستخدمين الجدد وقد تطبق شروط شي ان</small>
-
-    
-  </main>
-
-  <div class="sticky">
-    <a href="https://onelink.shein.com/28/5ey70p3cclk8" target="_blank">🔥 تفعيل خصم 50% الآن</a>
+  <div class="alert">
+    أكبر خصومات تطبيق شي ان 50% وأكثر
   </div>
+
+  <p>
+    خصم <strong>50%</strong> للمستخدمين الجدد على
+    <strong>تطبيق شي ان</strong> – <strong>SHEIN App</strong>
+  </p>
+
+  <div class="coupon">
+    <div class="code">V674RLD</div>
+    <button class="copy" onclick="copyCode()">📋 نسخ كود الخصم</button>
+    <div id="copied">✔ تم نسخ كود الخصم</div>
+  </div>
+
+  <p style="font-weight:600;margin-top:20px">🟢 طريقة الاستخدام</p>
+  <p>
+    1- انسخ كود الخصم بالأعلى.<br>
+    2- افتح تطبيق شي ان (SHEIN App).<br>
+    3- ضع الكود في خانة البحث أو عند الدفع لتفعيل الخصم.
+  </p>
+
+  <p>
+    في حال احتجتم إلى أي مساعدة يمكنكم التواصل معنا عبر
+    الماسنجر على صفحة Code&Shop.
+  </p>
+
+  <small>
+    * العرض مخصص للمستخدمين الجدد وقد تطبق شروط شي ان<br>
+    هذا الموقع غير تابع لشركة SHEIN
+  </small>
+</main>
 
 </body>
 </html>
